# rhealpix-geo

./: README.md  pyproject.toml  setup.py
rheal/: __init__.py  dggs_classes.py
tests/: test_cells.py
